<resources>
    <string name="app_name" translatable="false">KIP</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="sync" translatable="false">Sync</string>
    <string name="action_log_out">Logging Out</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="app_name_full">Kenya Immunization Platform (KIP)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="side_nav_add">Add new child</string>
    <string name="scan_card">Card Scanner</string>
    <string name="side_nav_out_of_catchment">Record out of catchment vaccination</string>
    <string name="side_nav_moh510_report">MOH 510 Report</string>
    <string name="out_of_catchment">Record out of catchment vaccination</string>
    <string name="nav_register">Register</string>
    <string name="attribution_text">Powered by OpenSRP</string>
    <string name="show_password_text">Show password</string>
    <string name="app_version">App version: %1$s (built on %2$s)</string>
    <string name="login_text">Log In</string>
    <string name="log_out_text">Log Out</string>
    <string name="send_kepi_sms_reminder">Send SMS Reminder</string>
    <string name="send_advocacy_sms">Send Advocacy SMS</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="arabic" translatable="false">عربى</string>
    <string name="zeir_id" translatable="false">KIP ID</string>
    <string name="iz_id_hint">KIP ID number</string>
    <string name="nav_logo" translatable="false">Kenya Immunization Platform(KIP)</string>
    <string name="title_activity_child_immunization" translatable="false">ChildImmunizationActivity</string>
    <string name="error_code">Error: %1$s</string>
    <string name="something_went_wrong">Something went wrong&#8230;</string>
    <string name="please_install_nfc_sdk">Please install the Nfc SDK first</string>
    <string name="install">Install</string>
    <string name="activate">Activate</string>
    <string name="please_activate_nfc_sdk">Nfc SDK NOT activated. Please activate&#8230;</string>
    <string name="nfc_sdk_missing">The Nfc SDK is missing </string>
    <string name="nfc_error">Please contact the helpdesk with error code %1$s %2$s %3$s</string>
    <string name="alert">Alert</string>
    <string name="card_not_registered">This card is not registered&#8230;</string>
    <string name="successfully_updated_card">Successfully updated card &#8230;</string>
    <string name="card_already_registered">This card is already registered&#8230;</string>
    <string name="card_no">Card No. %1$s </string>
    <string name="no_information_on_card">No information on the card. The card does not have a store for this application</string>
    <string name="the_card_is_full">The card is full and unusable. Please register another card</string>
    <string name="there_is_an_error_with_record"> There is an error with this record. Please contact the helpdesk with error code  %1$s %2$s %3$s and the client’s ID</string>
    <string name="the_operation_was_cancelled">The operation was cancelled. Please try again</string>
    <string name="the_sdk_is_not_activated">The SDK is not activated. Please activate the SDK by going to settings and touching Activate Nfc SDK and try again after successful activation</string>
    <string name="the_operation_failed">The operation failed. Please try again. Please contact the helpdesk with error code %1$s %2$s %3$s</string>
    <string name="this_card_is_invalid">This card is invalid. Please use another card</string>
    <string name="new_child_record">New child record </string>
    <string name="no_child_record_found">No record found on this device for this card, would you like to create one ?</string>
    <string name="operation_not_allowed">Operation not allowed</string>
    <string name="store_already_exists">Store already exists</string>
    <string name="store_does_not_exist">Store does not exist</string>
    <string name="store_full">Store full</string>
    <string name="operation_Cancelled">Operation Cancelled</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="sdk_is_not_configured">SDK is not configured</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="authentication_method_not_supported">Authentication method not supported</string>
    <string name="read_card_write_timed_out">Read Card/Write Timed out</string>
    <string name="unable_to_read_card">Unable to read card</string>
    <string name="not_a_valid_card">Not a valid card</string>
    <string name="key_expired">Key Expired</string>
    <string name="Key_validation_error">Key validation error</string>
    <string name="incorrect_key">Incorrect Key</string>
    <string name="key_revoked">Key revoked</string>
    <string name="application_ey_mismatch">Application-Key mismatch</string>
    <string name="not_found">Not Found</string>
    <string name="record_data_exceeds_limit">Record data exceeds limit</string>
    <string name="partially_successful">Partially Successful</string>
    <string name="user_authentication_failed">User Authentication Failed</string>
    <string name="new_card_registration">New card registration </string>
    <string name="no_child_registration_found">No card associated with this child on this device, would you to register card ?</string>
    <string name="reset_card">Reset card</string>
    <string name="are_you_sure_reset_card">Are you sure you want to Reset this card? \n\nThis action CANNOT be reversed&#8230;</string>
    <string name="arabic_not_supported">Vaccination in Arabic is not supported in this version</string>
    <string name="logo_string">logo</string>
    <string name="birth_registration_number">Birth registration number</string>
    <string name="middle_name">Middle Number</string>
    <string name="home_address">Home Address</string>
    <string name="village">Village</string>
    <string name="traditional_authority">Traditional Authority</string>
    <string name="mother_guardian_nid">Mother Guardian NID</string>
    <string name="protected_at_birth">Protected at Birth</string>
    <string name="mother_hiv_status">Mother Hiv Status</string>
    <string name="child_hiv_status">Child Hiv Status</string>
    <string name="child_treatment">Child Treatment</string>
    <string name="nav_registers">Registers</string>
    <string name="nav_logout_as">Logout as</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_last">"Last: </string>
    <string name="nav_last_sync_time">HH:mm a , MMM DD</string>
    <string name="log_out_as">Log out as</string>
    <string name="device_to_device_sync">Device-to-device Sync</string>
    <string name="action_start_sync">Sync Started</string>
    <string name="all_registers">All Registers</string>
    <string name="menu_child_clients">KEPI Clients</string>
    <string name="vit_a_1">Vit A 1</string>
    <string name="vit_a_2">Vit A 2</string>
    <string name="vit_a_3">Vit A 3</string>
    <string name="vit_a_4">Vit A 4</string>
    <string name="vit_a_5">Vit A 5</string>
    <string name="bcg_2">BCG Repeated Dose</string>
    <string name="mv_1">Malaria Vaccine 1</string>
    <string name="mv_2">Malaria Vaccine 2</string>
    <string name="mv_3">Malaria Vaccine 3</string>
    <string name="mv_4">Malaria Vaccine 4</string>
    <string name="create_reminder_label">Create BCG Repeated Dose reminder?</string>
    <string name="bcg_scar_not_present_label">Child does not have a BCG scar so BCG Repeated Dose is necessary.</string>
    <string name="bcg_scar_present_label">BCG scar is present so no BCG Repeated Dose is necessary.</string>
    <string name="ipv">IPV</string>
    <string name="bcg">BCG</string>
    <string name="menu_anc_clients">ANC Clients</string>
    <string name="due_only">Due Only</string>
    <string name="anc_register">ANC Register</string>
    <string name="label_zeir">KIP ID</string>
    <string name="system_id_colon">KIP ID:</string>
    <string name="title_child">Child</string>
    <string name="settings">Settings</string>
    <string name="union_council">Union Council</string>
    <string name="county">County</string>
    <string name="sub_county">Sub County</string>
    <string name="ward">Ward</string>
    <string name="sub_location">Sub Location</string>
    <string name="landmark">Landmark</string>
    <string name="loading">Loading</string>
    <string name="please_wait_message">Please wait</string>
    <string name="reports">Reports</string>
    <string name="EPNT_M_label">Tetanus Protection at Birth Male Total</string>
    <string name="EPNT_F_label">Tetanus Protection at Birth Female Total</string>
    <string name="EPNT_label">Tetanus Protection at Birth Total</string>
    <string name="EPNT_M_horsZone_label">Tetanus Protection at Birth Male Out of Catchment Total</string>
    <string name="EPNT_F_horsZone_label">Tetanus Protection at Birth Female Out of Catchment Total</string>
    <string name="BCG_M_label">BCG Male Total</string>
    <string name="BCG_F_label">BCG Female Total</string>
    <string name="BCG_label">BCG Total</string>
    <string name="BCG_M_horsZone_label">BCG Male Out of Catchment Total</string>
    <string name="BCG_F_horsZone_label">BCG Female Out of Catchment Total</string>
    <string name="BCG_M_plus12m_label">BCG Male Older Than 12 Months Total</string>
    <string name="BCG_F_plus12m_label">BCG Female Older Than 12 Months Total</string>
    <string name="BCG_plus12m_label">BCG Older Than 12 Months Total</string>
    <string name="HepBnaissance_M_label">Hep B at Birth Male Total</string>
    <string name="HepBnaissance_F_label">Hep B at Birth Female Total</string>
    <string name="HepBnaissance_label">Hep B at Birth Total</string>
    <string name="HepBnaissance_M_horsZone_label">Hep B at Birth Male Out of Catchment Total</string>
    <string name="HepBnaissance_F_horsZone_label">Hep B at Birth Female Out of Catchment Total</string>
    <string name="VPO_0_M_label">OPV 0 Male Total</string>
    <string name="VPO_0_F_label">OPV 0 Female Total</string>
    <string name="VPO_0_label">OPV 0 Total</string>
    <string name="VPO_0_M_horsZone_label">OPV 0 Male Out of Catchment Total</string>
    <string name="VPO_0_F_horsZone_label">OPV 0 Female Out of Catchment Total</string>
    <string name="VPO_1_M_label">OPV 1 Male Total</string>
    <string name="VPO_1_F_label">OPV 1 Female Total</string>
    <string name="VPO_1_label">OPV 1 Total</string>
    <string name="VPO_1_M_horsZone_label">OPV 1 Male Out of Catchment Total</string>
    <string name="VPO_1_F_horsZone_label">OPV 1 Female Out of Catchment Total</string>
    <string name="VPO_1_M_plus12m_label">OPV 1 Male Older Than 12 Months Total</string>
    <string name="VPO_1_F_plus12m_label">OPV 1 Female Older Than 12 Months Total</string>
    <string name="antigen">Antigen</string>
    <string name="moh710_age">Age</string>
    <string name="moh710_value">Value</string>
    <string name="opd_close">OPD CLOSE</string>
    <string name="diagnose_and_treat"><![CDATA[Click to proceed]]></string>
    <string name="covid19_vaccination_eligibility_check">Covid 19 Vaccination Eligibility Check</string>
    <string name="covid19_vaccination_administration">Covid 19 Vaccine Administration</string>
    <string name="opd_adverse_event_text">Covid 19 Report Adverse Event</string>
    <string name="opd_influenza_adverse_event_text">Report Influenza Adverse Event</string>
    <string name="opd_send_sms">Send SMS Reminder</string>
    <string name="influenza_medical_condition">Influenza Vaccine Work Flow </string>
    <string name="influenza_vaccine_administration">Influenza Vaccine Administration</string>
</resources>