<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/moh710_vertical_margin"
            android:paddingLeft="@dimen/moh710_padding_left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/moh710_vertical_margin"
            android:text="@string/antigen"
            android:textColor="@color/text_black"
            android:textSize="17sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2">


        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/moh710_vertical_margin"
            android:paddingLeft="@dimen/moh710_padding_left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/moh710_vertical_margin"
            android:text="@string/moh710_age"
            android:textColor="@color/text_black"
            android:textSize="17sp" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/moh710_vertical_margin"
            android:paddingLeft="@dimen/moh710_padding_left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/moh710_vertical_margin"
            android:text="@string/moh710_value"
            android:textColor="@color/text_black"
            android:textSize="17sp" />


    </RelativeLayout>

</LinearLayout>